--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@ui5/webcomponents-react": "^0.18.4",
     "axios": "^0.21.1",
     "localforage": "^1.10.0",
+    "localforage-getitems": "^1.4.2",
+    "localforage-setitems": "^1.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
